--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.rivernine'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
@@ -15,13 +15,20 @@ repositories {
 dependencies {
 	implementation (
 		'org.springframework.boot:spring-boot-starter-web',				// Rest		
-		'org.springframework.boot:spring-boot-starter-data-jpa',	// JPA		
-		'org.springframework.boot:spring-boot-starter-batch',			// Batch		
 		'org.mariadb.jdbc:mariadb-java-client:2.7.2',							// MariaDB
 		'org.projectlombok:lombok',																// Lombok
 		'ch.qos.logback:logback-classic:1.2.3',										// Logback
 		'ch.qos.logback:logback-core:1.2.3',											// Logback
 		'com.google.code.gson:gson',															// Gson
+		// Binance
+		'com.squareup.okhttp3:okhttp',
+		'com.alibaba:fastjson:1.2.73',
+		'org.powermock:powermock-api-mockito:1.7.4',
+		'org.powermock:powermock-module-junit4:1.7.4',
+		'junit:junit:4.12',
+		'org.apache.commons:commons-lang3:3.6',
+		'commons-codec:commons-codec:1.10',
+		'commons-lang:commons-lang:2.6',
 	)
 	
 	annotationProcessor 'org.projectlombok:lombok'
@@ -31,95 +38,3 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
-
-
-
-
-
-// <?xml version="1.0" encoding="UTF-8" ?>
-// <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-//     <modelVersion>4.0.0</modelVersion>
-
-//     <groupId>com.binance.sdk</groupId>
-//     <artifactId>binance-client</artifactId>
-//     <version>1.0.9-SNAPSHOT</version>
-
-//     <properties>
-//         <java.version>1.8</java.version>
-//         <okhttp3.version>3.12.1</okhttp3.version>
-//         <fastjson.version>1.2.47</fastjson.version>
-//     </properties>
-
-//     <dependencies>
-//         <dependency>
-//             <groupId>com.squareup.okhttp3</groupId>
-//             <artifactId>okhttp</artifactId>
-//             <version>${okhttp3.version}</version>
-//         </dependency>
-//         <dependency>
-//             <groupId>com.alibaba</groupId>
-//             <artifactId>fastjson</artifactId>
-//             <version>${fastjson.version}</version>
-//         </dependency>
-//         <dependency>
-//             <groupId>ch.qos.logback</groupId>
-//             <artifactId>logback-classic</artifactId>
-//             <version>1.2.3</version>
-//         </dependency>
-//         <dependency>
-//             <groupId>org.powermock</groupId>
-//             <artifactId>powermock-api-mockito</artifactId>
-//             <version>1.7.4</version>
-//             <scope>test</scope>
-//         </dependency>
-//         <dependency>
-//             <groupId>org.powermock</groupId>
-//             <artifactId>powermock-module-junit4</artifactId>
-//             <version>1.7.4</version>
-//             <scope>test</scope>
-//         </dependency>
-//         <dependency>
-//             <groupId>junit</groupId>
-//             <artifactId>junit</artifactId>
-//             <version>4.12</version>
-//             <scope>test</scope>
-//         </dependency>
-//         <dependency>
-//             <groupId>org.apache.commons</groupId>
-//             <artifactId>commons-lang3</artifactId>
-//             <version>3.6</version>
-//         </dependency>
-//         <dependency>
-//             <groupId>commons-codec</groupId>
-//             <artifactId>commons-codec</artifactId>
-//             <version>1.10</version>
-//         </dependency>
-//         <dependency>
-//             <groupId>commons-lang</groupId>
-//             <artifactId>commons-lang</artifactId>
-//             <version>2.6</version>
-//         </dependency>
-//     </dependencies>
-
-
-//     <build>
-//         <resources>
-//             <resource>
-//                 <directory>src/main/resources</directory>
-//             </resource>
-//         </resources>
-//         <plugins>
-//             <plugin>
-//                 <groupId>org.apache.maven.plugins</groupId>
-//                 <artifactId>maven-compiler-plugin</artifactId>
-//                 <configuration>
-//                     <source>1.8</source>
-//                     <target>1.8</target>
-//                     <encoding>UTF-8</encoding>
-//                     <compilerArgument>-Xlint:unchecked</compilerArgument>
-//                 </configuration>
-//             </plugin>
-//         </plugins>
-//     </build>
-
-// </project>
