--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,9 @@ binance:
   apiKey: ${apiKey:NONE}
   secretKey: ${secretKey:NONE}
   symbols: ${symbols:BTCUSDT,ETHUSDT}
-  longBlueCandleRate: ${longBlueCandleRate:0.004}
   leverages: ${leverages:1,2,3,4,5}
   bidBalance: ${bidBalance:5}
+  longBlueCandleRate: ${longBlueCandleRate:0.004}
+  lossCutRate: ${lossCutRate:0.02}
   marginRatePerLevel: ${marginRatePerLevel:0.5,0.4,0.3,0.2,0.1}
+  scaleTradeRatePerLevel: ${scaleTradeRatePerLevel:0.004,0.005,0.006,0.007,0.008}
