--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 binance:
   apiKey: ${apiKey:NONE}
   secretKey: ${secretKey:NONE}
-  symbols: ${symbols:BTCUSDT,ETHUSDT}
+  symbols: ${symbols:BTCUSDT,ETHUSDT,XRPUSDT,ADAUSDT,DOGEUSDT,ETCUSDT}
   leverages: ${leverages:1,2,3,4,5}
   bidBalance: ${bidBalance:5}
-  longBlueCandleRate: ${longBlueCandleRate:0.004}
+  longBlueCandleRate: ${longBlueCandleRate:0.002}
   lossCutRate: ${lossCutRate:0.02}
   marginRatePerLevel: ${marginRatePerLevel:0.5,0.4,0.3,0.2,0.1}
-  scaleTradeRatePerLevel: ${scaleTradeRatePerLevel:0.004,0.005,0.006,0.007,0.008}
+  scaleTradeRatePerLevel: ${scaleTradeRatePerLevel:0.002,0.003,0.004,0.005,0.006}
