--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,12 @@
 binance:
   apiKey: ${apiKey:NONE}
   secretKey: ${secretKey:NONE}
+  symbol: ${symbol:BTCUSDT}
   symbols: ${symbols:BTCUSDT,ETHUSDT,XRPUSDT,ADAUSDT,DOGEUSDT,ETCUSDT}
   leverages: ${leverages:1,2,3,4,5}
   # bidBalance: ${bidBalance:6}
   longBlueCandleRate: ${longBlueCandleRate:0.004}
   lossCutRate: ${lossCutRate:0.02}
-  marginRatePerLevel: ${marginRatePerLevel:0.002,0.0025,0.003,0.002,0.001}
+  marginRatePerLevel: ${marginRatePerLevel:0.002,0.0025,0.003,0.001,0.001}
   scaleTradeRatePerLevel: ${scaleTradeRatePerLevel:0.002,0.003,0.004,0.005,0.006}
   bidBalancePerLevel: ${bidBalancePerLevel:6,12,18,24,30}
